# glider-dash

./: .gitignore  .sqlfluff  README.md  app.py  pyproject.toml
.devcontainer/: devcontainer.json
application/: app.py
application/pages/: flight_log.py  thermal_spots.py
components/: flight_log.py
data_infrastructure/dbt_bq/: dbt_project.yml
data_infrastructure/dbt_bq/models/: flight_log.sql  flight_log_minutely.sql  schema.yaml
data_infrastructure/infra/: main.tf  terraform.tfvars.sample  variables.tf
data_infrastructure/infra/modules/bigquery/: variables.tf
data_infrastructure/infra/modules/cloud_functions/: main.tf  variables.tf
data_infrastructure/infra/modules/cloud_functions/function/: example.http  main.py  requirements.txt
data_infrastructure/workflow/: create_deployment.py  weather_data.py
infra/: main.tf  terraform.tfvars.sample  variables.tf
infra/function/: igc.py  main.py  requirements.txt
pages/: flight_log.py  home.py  thermal_analysis.py  thermal_spots.py
src/: config.py  consts.py  fetch_data.py  stats.py
src/amedas_scraper/: scraper.py
src/flight_log_processor/: agg.py  igc.py
src/lambda/: amedas.py  igc2csv.py
src/preprocessing/: agg.py  amedas.py  igc.py  run.py
tests/amedas_scraper/: test_scraper.py
tests/glider_log_processor/: test_igc.py
utils/: data_processing.py
utils/preprocessing/: agg.py  igc.py  run.py
